# mclp

./: .gitattributes  .gitignore  LICENSE  README.md  __init__.py  config.py  data_loader.py  heuristics.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  jobs.py  main.py  schemas.py
core/: __init__.py  algorithms.py  exports.py  files.py  instance.py  models.py
scripts/: ensure_data.py
web/: build.ps1  dev.ps1  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
